2002-03-22  Werner Koch  <wk@gnupg.org>

	* cert.c (get_name): Fixed enumering of alternate names.

	* name.c: New.
	* ksba.h (KsbaName): New.  Added defintions for the name functions.
	(KsbaCRLReason): Changed values to allow use as bit flags.
	* cert.c (parse_distribution_point): New. 
	(ksba_cert_get_crl_dist_point): New.

2002-03-15  Werner Koch  <wk@gnupg.org>

	* asn1-func.c (_ksba_asn_check_identifier): Better check against
	overflow, also the data used is static.

2002-03-13  Werner Koch  <wk@gnupg.org>

	* cms.h (value_tree_s): New and use it for recp_info.
	(enc_val_s): New, use it in certlist and remove it from the
	ksba_cms_s and change all users.
	* cms.c (ksba_cms_set_enc_val): Allow multiple recipients.
	(ksba_cms_add_signer): Keep ordering of signers so that they can
	be implictly counted by an index.
	(build_enveloped_data_header): Fixed the creation of the RID.

	* cms.c (release_value_tree): New.
	(ksba_cms_release): And use it here.
	(ksba_cms_get_issuer_serial): Use the new recp_list structure and
	take the IDX into account.
	(ksba_cms_get_enc_val): Ditto.
	(ksba_cms_set_sig_val,ksba_cms_set_enc_val): Don't store a leading
	zero.

	* cms-parser.c (_ksba_cms_parse_enveloped_data_part_1): Handle
	multiple recipients.

	* cms.c (build_signed_data_rest): Write 3 end tags.
	(ct_build_enveloped_data): Write 4 end tags.

2002-03-12  Werner Koch  <wk@gnupg.org>

	* cms-parser.c (_ksba_cms_parse_signed_data_part_2): Allow an
	empty set of signer infos.

2002-03-11  Werner Koch  <wk@gnupg.org>

	* keyinfo.c: Fixed last change; forgot to set the length.

2002-03-09  Werner Koch  <wk@gnupg.org>

	* keyinfo.c: Add algo for Telesec NetKey cards.

2002-02-19  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_cert_policies): New.

2002-02-07  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_release): Release the nodes.

2002-02-01  Marcus Brinkmann  <marcus@g10code.de>

	* asn1-parse.y: Add missing colon at end of block.
