@@ -29,6 +29,8 @@ time_t _ksba_asntime_to_epoch (const char *buffer, size_t length);
 /*-- dn.c --*/
 KsbaError _ksba_dn_to_str (const unsigned char *image, AsnNode node,
                            char **r_string);
+KsbaError _ksba_derdn_to_str (const unsigned char *der, size_t derlen,
+                              char **r_string);
 KsbaError _ksba_dn_from_str (const char *string, char **rbuf, size_t *rlength);
 
 /*-- oid.c --*/
