@@ -1,3 +1,9 @@
+2002-04-15  Werner Koch  <wk@gnupg.org>
+
+	* cert.c (ksba_cert_get_auth_key_id): New.
+	* name.c (_ksba_name_new_from_der): Add support for "Name" type.
+	* dn.c (_ksba_derdn_to_str): New.
+
 2002-03-22  Werner Koch  <wk@gnupg.org>
 
 	* cert.c (get_name): Fixed enumering of alternate names.
